samples/_failures_safe/1761620853_c2373b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02e08f9d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_02e08f9d.c:157:12: error: missing terminating " character
  157 |     printf("Shortest
      |            ^~~~~~~~~
./samples/SAFE/__tmp_02e08f9d.c:157:5: error: expected expression at end of input
  157 |     printf("Shortest
      |     ^~~~~~
./samples/SAFE/__tmp_02e08f9d.c:157:5: error: expected declaration or statement at end of input
